--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.dagger:dagger:2.20'
     kapt 'com.google.dagger:dagger-compiler:2.11'
+
+    kapt "com.google.dagger:dagger-compiler:2.x"
+    kapt "com.google.dagger:dagger-android-processor:2.x"
+
     provided 'javax.annotation:jsr250-api:1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
